# crepe

./: .gitignore  meson.build
src/: crepe.cpp  crepe_config.cpp  crepe_config.hpp  error.cpp  error.hpp  useful.cpp  useful.h  useful.hpp
tests/: test_crepe_config.cpp  test_useful.cpp  useful_test_code.hpp
